calculadora/src/main/java/com/example/alumnos/error/ErrorResponse.java
package com.example.alumnos.error;

public class ErrorResponse {
	private String type;
	private String details;
	private String code;
	
	
	public String getType() {
		return type;
	}
	public void setType(String type) {
		this.type = type;
	}
	public String getDetails() {
		return details;
	}
	public void setDetails(String details) {
		this.details = details;
	}
	public String getCode() {
		return code;
	}
	public void setCode(String code) {
		this.code = code;
	}
	
	

}

